tests/golden/openshift/vault/vault/10_vault/vault/templates/server-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/instance: foobar
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault
    helm.sh/chart: vault-0.30.0
    vault-internal: 'true'
  name: foobar-internal
  namespace: vault
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8200
      targetPort: 8200
    - name: https-internal
      port: 8201
      targetPort: 8201
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: foobar
    app.kubernetes.io/name: vault
    component: server
