tests/golden/openshift/vault/vault/10_vault/vault/templates/server-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: foobar
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: vault
  name: foobar
  namespace: vault
spec:
  podManagementPolicy: OrderedReady
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: foobar
      app.kubernetes.io/name: vault
      component: server
  serviceName: foobar-internal
  template:
    metadata:
      annotations: null
      labels:
        app.kubernetes.io/instance: foobar
        app.kubernetes.io/name: vault
        component: server
        helm.sh/chart: vault-0.30.0
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: foobar
                  app.kubernetes.io/name: vault
                  component: server
              topologyKey: kubernetes.io/hostname
      containers:
        - args:
            - "cp /vault/config/extraconfig-from-values.hcl /tmp/storageconfig.hcl;\n\
              [ -n \"${HOST_IP}\" ] && sed -Ei \"s|HOST_IP|${HOST_IP?}|g\" /tmp/storageconfig.hcl;\n\
              [ -n \"${POD_IP}\" ] && sed -Ei \"s|POD_IP|${POD_IP?}|g\" /tmp/storageconfig.hcl;\n\
              [ -n \"${HOSTNAME}\" ] && sed -Ei \"s|HOSTNAME|${HOSTNAME?}|g\" /tmp/storageconfig.hcl;\n\
              [ -n \"${API_ADDR}\" ] && sed -Ei \"s|API_ADDR|${API_ADDR?}|g\" /tmp/storageconfig.hcl;\n\
              [ -n \"${TRANSIT_ADDR}\" ] && sed -Ei \"s|TRANSIT_ADDR|${TRANSIT_ADDR?}|g\"\
              \ /tmp/storageconfig.hcl;\n[ -n \"${RAFT_ADDR}\" ] && sed -Ei \"s|RAFT_ADDR|${RAFT_ADDR?}|g\"\
              \ /tmp/storageconfig.hcl;\n/usr/local/bin/docker-entrypoint.sh vault\
              \ server -config=/tmp/storageconfig.hcl \n"
          command:
            - /bin/sh
            - -ec
          env:
            - name: HOST_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: VAULT_K8S_POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: VAULT_K8S_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: VAULT_ADDR
              value: http://127.0.0.1:8200
            - name: VAULT_API_ADDR
              value: https://vault.todo.tld
            - name: SKIP_CHOWN
              value: 'true'
            - name: SKIP_SETCAP
              value: 'true'
            - name: HOSTNAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: VAULT_CLUSTER_ADDR
              value: https://$(HOSTNAME).foobar-internal:8201
            - name: HOME
              value: /home/vault
          image: docker.io/hashicorp/vault:2.1.1
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - sleep 5 && kill -SIGTERM $(pidof vault)
          name: vault
          ports:
            - containerPort: 8200
              name: http
            - containerPort: 8201
              name: https-internal
            - containerPort: 8202
              name: http-rep
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -ec
                - vault status -tls-skip-verify
            failureThreshold: 2
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 1000m
              memory: 9001Mi
            requests:
              cpu: 420m
              memory: 1337Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /vault/data
              name: data
            - mountPath: /vault/config
              name: config
            - mountPath: /home/vault
              name: home
        - args:
            - --secret-shares=1
            - --secret-threshold=1
            - --mode=k8s
            - --k8s-secret-namespace=vault
            - --k8s-secret-name=foobar-seal
            - --raft
            - --raft-leader-address
            - http://foobar-active:8200
          command:
            - bank-vaults
            - unseal
            - --init
          env:
            - name: VAULT_ADDR
              value: http://127.0.0.1:8200
          image: ghcr.io/bank-vaults/bank-vaults:v1.31.4
          name: vault-unsealer
          ports:
            - containerPort: 9200
              name: vault-metrics
            - containerPort: 9091
              name: unseal-metrics
          resources:
            limits:
              cpu: 100m
              memory: 64Mi
      hostNetwork: false
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 100
      serviceAccountName: foobar
      terminationGracePeriodSeconds: 10
      volumes:
        - configMap:
            name: foobar-config
          name: config
        - emptyDir: {}
          name: home
  updateStrategy:
    type: OnDelete
  volumeClaimTemplates:
    - metadata:
        annotations:
          k8up.io/backup: 'false'
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1337G
